--- a/Creditz-Angular-src/app/register/register.component.css
+++ b/Creditz-Angular-src/app/register/register.component.css
@@ -1,5 +1,5 @@
-/* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
-body {font-family: Arial, Helvetica, sans-serif;}
+ @import "~@angular/material/prebuilt-themes/indigo-pink.css"; 
+/* body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
 
 input[type=text], input[type=password], input[type=email], input[type=address] {
@@ -9,9 +9,9 @@ input[type=text], input[type=password], input[type=email], input[type=address] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
-}
+} */
 
-button {
+/* button {
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -29,7 +29,7 @@ button:hover {
   width: auto;
   padding: 10px 18px;
   background-color: #f44336;
-}
+} */
 
 .imgcontainer {
   text-align: center;
@@ -41,7 +41,28 @@ img.avatar {
   border-radius: 10%;
 }
 
-.container {
+.content {
+  display: flex;
+  background-color: darkblue;
+  margin: 82px auto 32px;
+  padding: 0 16px;
+  max-width: 960px;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+svg#clouds {
+  position: fixed;
+  
+  bottom: -160px;
+  left: -230px;
+  z-index: -10;
+  width: 1920px;
+}
+
+
+/* .container {
   padding: 16px;
 }
 
@@ -51,12 +72,19 @@ span.psw {
 }
 
 /* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
+/* @media screen and (max-width: 300px) {
   span.psw {
      display: block;
      float: none;
   }
   .cancelbtn {
      width: 100%;
+  } */ */
+
+  .matt{
+     height: 100%;
+     width: 70%;
+     float: left;
+     background-color: blue;
+
   }
-}
