--- a/Creditz-Angular-src/app/header/header.component.css
+++ b/Creditz-Angular-src/app/header/header.component.css
@@ -40,7 +40,7 @@
   a:hover {
     color: #125699;
     cursor:pointer;
-    -webkit-transform: scale(1.2);
+    /* -webkit-transform: scale(1.2); */
 
   }
 
