--- a/Creditz-Angular-src/app/home/home.component.html
+++ b/Creditz-Angular-src/app/home/home.component.html
@@ -1,8 +1,8 @@
 
 
 <div style="  height: 100vh;
-  line-height: 50vh;
-  text-align: right;
+  line-height: 70vh;
+  text-align: center;
   margin:5vh">
 
   <span style="   display: inline-block;
