--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; min-width: 40%; margin-right:2%; width: 50%; float: right; align: center" >
+<div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
 <br>
 ABOUT Personal User Policies(key points)<br>
 1.FLAT EMI POLICY<br>
@@ -15,7 +15,7 @@ ABOUT Personal User Policies(key points)<br>
 
 </div>
 
-<div style=" display:block; float: left; max-width:40%" >
+<div style=" display:block; float: left; max-width:25%" >
 
 <div class="limiter">
 		<div class="container-login100"><br>
@@ -31,14 +31,12 @@ ABOUT Personal User Policies(key points)<br>
 <div class="wrap-input100" >
       <input type="number" class="input100" placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
  						<span class="focus-input100"></span>
-							<i class="fa fa-envelope" aria-hidden="true"></i>
     </div>
 
 
     <div class="wrap-input100" >
       <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure><br>
   						<span class="focus-input100"></span>
-							<i class="fa fa-lock" aria-hidden="true"></i>
     </div>
 
     <label aTilt><br>EMI: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
