--- a/Creditz-Angular-src/app/login/login.component.css
+++ b/Creditz-Angular-src/app/login/login.component.css
@@ -4,7 +4,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   width: 100%;
   padding: 4% 5%;
   margin: 8px 0;
@@ -12,6 +12,7 @@ input[type=text], input[type=password] {
   border: 1% solid #ccc;
   box-sizing: border-box;
 }
+
 
 .click{
   cursor:pointer;
@@ -185,12 +186,12 @@ iframe {
 [ login ]*/
 
 .limiter {
-  width: 90%;
+  width: 50%;
   margin: 0 auto;
 }
 
 .container-login100 {
-  width: 100%;  
+  min-width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -256,7 +257,7 @@ iframe {
 
 /*---------------------------------------------*/
 .wrap-input100 {
-  position: relative;
+  position: initial;
   width: 100%;
   z-index: 1;
   margin-bottom: 10px;
