--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -1,5 +1,3 @@
-<div style="display: block; min-width: 100%; " >
-
 <div class="limiter">
 		<div class="container-login100">
 		<div class="wrap-login100">
@@ -9,28 +7,36 @@
 </div>
 
 <div style=" float: right; margin:0%">
-    <form #loginForm="ngForm" (ngSubmit)="onSubmit()" method="POST" class="login100-form validate-form" style="border:none;" >
+    <form #loginForm="ngForm" (ngSubmit)="onSubmit()" method="POST" class="login100-form validate-form" style="border:none;" novalidate>
 <br>
 <!--   {{ loginForm.value | json}}
     <hr/><br>
     {{ loginModel|json }} 
     -->
 <br>
-    <div class="wrap-input100 validate-input" placeholder="Email" data-validate = "userEmail is required">
-      <input type="text" class="input100"  name="userEmail" [(ngModel)]="loginModel.userEmail" required>
+  	<mat-form-field appearance="none">
+    <div class="wrap-input100 validate-input">
+	<mat-label>Your Email</mat-label>
+      <input matInput placeholder="yourEmail" type="email"  class="input100" name="userEmail" #userEmail="ngModel" [(ngModel)]="loginModel.userEmail" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [class.is-invalid]="userEmail.invalid && userEmail.touched" required>
  						<span class="focus-input100"></span>
 						<!--<i class="fa fa-envelope" aria-hidden="true"></i>-->
     </div>
+	</mat-form-field><br>
 
 
+	
+  	<mat-form-field appearance="none">
     <div class="wrap-input100 validate-input" placeholder="Password" data-validate = "password is required">
-    <input type="password" class="input100" name="password" [(ngModel)]="loginModel.password" required>
+    <mat-label>Password</mat-label>
+
+	<input matInput type="password" class="input100" name="password" [(ngModel)]="loginModel.password" required>
 						<span class="focus-input100"></span>
 						<!--<i class="fa fa-lock" aria-hidden="true"></i>-->
     </div>
+	</mat-form-field>
 
     <div class="container-login100-form-btn" >
-      <button type="submit" class="login100-form-btn">Login</button>
+      <button type="submit" class="login100-form-btn" [disabled]="loginForm.form.invalid" id="submit" >Login</button>
     </div>
 
     
@@ -51,7 +57,6 @@
 					</div>
 </form>
 
-</div>
 </div>
 </div>
 </div>
