--- a/Creditz-Angular-src/app/app.component.html
+++ b/Creditz-Angular-src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-<div class="content" role="main">
     <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677"
         viewBox="0 0 2611.084 485.677">
         <path id="Path_39" data-name="Path 39"
@@ -7,10 +6,8 @@
             transform="translate(142.69 -634.312)" fill="#eee" />
     </svg>
 
-</div>
-
 <div >
-    <div style="display: block; width: 60%">
+    <div style="display: block;">
          <router-outlet></router-outlet>
     </div>
 
