--- a/Creditz-Angular-src/app/contact-us/contact-us.component.html
+++ b/Creditz-Angular-src/app/contact-us/contact-us.component.html
@@ -1,1 +1,29 @@
-<p>contact-us works!</p>
+<div class="container">
+  <img src="assets\contact.jpg" alt="Snow" style="width:100%; filter: blur(2px); filter: brightness(50%);">
+  <div class="centered"><h1 style=" font-size: 64px;">Talk to a Human</h1><br>
+  <h2> <br>You're not going to hit a ridiculously long phone menu when you call us. Your email isn't going to the inbox abyss, never to be seen or heard from again. We provide the exceptional service we'd want to experience ourselves!
+  </h2>
+  </div>
+</div>
+
+<div style="float:left; align: left; max-width:30%; margin-left:5%"><br>
+<h1>Corporate Office</h1><br>
+<h4>8668 creditz Center Dr.<br>
+India (456001)<br>
+</h4></div>
+
+<div style=" max-width:30%; top:68%; left:45%; position: absolute;"> 
+<h1>Direct Contact</h1><br>
+<h4>Phone: 720.974.7878<br>
+Toll Free: 1.877.929.7878<br>
+Email: info@creditz.co.in</h4><br>
+</div>
+
+<div style="float:right; align: right; max-width:30% margin-right:5%">
+<br><h1>Departments</h1><br>
+<h4>customerservice@creditz.co.in<br>
+disputes@creditz.co.in<br>
+compliance@creditz.co.in<br>
+careers@creditz.co.in<br>
+</h4>
+</div>
