--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button> 
 
-  <a class="navbar-brand" href="#">C₹ED!TZ</a>
+  <a class="navbar-brand" href="#" style="font-size:24px; margin-top:1%">C₹ED!TZ</a>
 
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -16,19 +16,19 @@
         <a class="nav-link" href="aboutUs" >      About   Us  </a>
       </li>
 
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="faq" >  FAQ  </a>
-      </li>
+      </li> -->
 
      <li class="nav-item" >
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href ="ourPolicies">  Our Policies  </a>
-          <div class="dropdown-menu">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="policy">  Our Policies  </a>
+          <div class="dropdown-menu" aria-labelledby="policy">
             <a class="dropdown-item" href="individual-user">Individual Policies</a>
              <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Organizational-User">Organizational Policies</a>
+            <a class="dropdown-item" href="organization-user-calculator">Organizational Policies</a>
           </div>
       </li>  
-      
+
       <li class="nav-item" *ngIf="this.store==null">
         <a class="nav-link" href="login" >  login  </a>
       </li>
@@ -39,10 +39,10 @@
 
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+  <!--  <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form>-->
   </div>
 </nav> 
 <!--
