--- a/Creditz-Angular-src/app/about-us/about-us.component.html
+++ b/Creditz-Angular-src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<!--<div style="display: block; min-width: 400px; margin-right:5%; width: 50%; float: right;" >
+<div style="display: block; min-width: 400px; margin-right:5%; width: 50%; float: right;" >
 <br>
 ABOUT Personal User Policies(key points)<br>
 1.FLAT EMI POLICY<br>
@@ -17,50 +17,4 @@ ABOUT Organizational User Policies(key points)<br>
 5. Want to upgrade Startup? We are here<br>
 6. What are our screening POLICY<br>
 7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
-</div>-->
-
-
-
-<div id="wrap">
-
-
-<div class="container">
-  <img src="assets/blank.png" alt="" style="width:100%; height:10%">
-  <div class="center-left" ><h1 style=" font-size: 64px;" aTilt>About Us</h1><br>
- </div><br>
-    <div class="bottom-right">
-    <img src="assets/loan.png" alt="Snow" style="width:70%; align:right;">
-    </div>
 </div>
-
-    <div class="space-footer">
-        <section class="white">
-            <div class="container">
-                <article class="orange-box">
-                    <div class="row row2col">
-                        <div class="col-md-6 col-left">
-                            <p>Creditz is a self owned product, created to help companies to identify and choose their audience to which we can provide loan, meticulasly.</p>
-                            <p>Some of the biggest brains of our company employeed very acute and incisive approach to understand what are the risk an organizations might face whilst providing loans to any individual or any well established organization, and we had craeted an algorith which promise to provide 99% safety to the loan providers.</p>
-                            <p></p>
-                        </div>
-                        <div class="col-md-6 col-right">
-                            <p>  I am thinking that, we can write the problem statement here! </p>
-                            <p><i>Happy Loaning!</i></p>
-                        </div>
-                </div></article>
-                <div class="clearfix"></div>
-            </div>
-            <div class="block-quotes" aTilt>
-                <div class="green-quotes">
-                    <div class="content-border top"></div>
-                    <div class="content-border bottom"></div>
-                    <div class="content-border left"></div>
-                    <div class="content-border right"></div>
-                    <h2 class="quote"><span>“</span>You Suggest, <br>We Invest.<span>”</span></h2>
-                </div>
-            </div>
-            
-        </section>
-    </div>
-
-			</div>
