--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,5 +1,5 @@
 <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
-<!--<br>
+<br>
 ABOUT Personal User Policies(key points)<br>
 1.FLAT EMI POLICY<br>
 2.11.5% intrest rate on individual Loan<br>
@@ -7,55 +7,10 @@ ABOUT Personal User Policies(key points)<br>
 4. loan for your buisness<br>
 5. Want to start Startup? We are here<br>
 6. What are our screening POLICY<br>
-7. Check your Emi by yourself before Applying! because we care about your credit score!<br>-->
+7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
 
-
-
-<div id="wrap">
-
-
-<div class="container">
-  <img src="assets/blank.png" alt="" style="width:2%; height:1%">
-<!--  <div class="center-left" ><h1 style=" font-size: 40px;" aTilt>Policy:</h1><br>
- </div><br> -->
-<!--    <div class="bottom-right">
-    <img src="assets/loan.png" alt="" style="width:70%; align:right;">
-    </div>-->
-</div>
-
-    <div class="space-footer">
-        <section class="white">
-            <div class="container">
-                <article class="orange-box">
-                   <h1  style="color:white;">Policy for Individuals<br></h1>
-                    <div class="row row2col">
-                        <div class="col-md-6 col-left">
-                            <p  style="color:white;"> 
-                              1. Flat EMI<br><br>
-                              2. 11.5% intrest rate on individual Loan<br><br>
-                              3. Un-Secured loans<br><br>
-                              4. Loans for you startup ideas.<br><br>
-                            </p>
-                        </div>
-                        <div class="col-md-6 col-right">
-                            <p  style="color:white;">                                
-                            5. Want to start Startup? We are here<br><br>
-                            6. What are our screening POLICY<br><br>
-                            7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
-                            </p>
-                            <p  style="color:white;"><i>Happy Loaning!</i></p>
-                        </div>
-                </div></article>
-                <div class="clearfix"></div>
-            </div>
-            
-        </section>
-    </div>
-
-			</div>
-
-   <div class="container-login100-form-btn" >
-      <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Here!</button>
+    <div class="container-login100-form-btn" >
+      <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Now</button>
     </div>
 
 </div>
