--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.css
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.css
@@ -1,3 +1,87 @@
+
+
+
+
+
+
+
+
+
+
+
+table {
+  width: 100%;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 104px;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 16px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
+
+mat-header-cell 
+ {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 15px;color: darkblue; 
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .creditor-panel {
   max-width: 400px;
   margin: 30%;
@@ -6,7 +90,7 @@
 
 h1{
   font-family: 'Times New Roman', Times, serif;
-  font-size: 50px;color: darkblue;
+  font-size: 30px;color: darkblue;
 }
 .mat-tab-group {
   margin-bottom: auto;
@@ -26,12 +110,12 @@ table {
 }
 .mat-tab
 {
-  color: crimson;
+  color:black;
 }
 
 td{
 font-size:15px;
-color: crimson;
+color:black;
  }
 
  th{
