--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
@@ -1,113 +1,117 @@
-<div style="display: block; width: 90%; min-width: 400px; margin-left:41%;">
-  <div class="Creditor-panel">
-  <mat-tab-group animationDuration="1000ms">
-  <mat-tab label ="Top Individual Creditors">
-    
-    <div class="table-responsive">  
-    <table mat-table [dataSource]="dataSource">
-    
-    
-    <ng-container matColumnDef="personId">
-      <th mat-header-cell *matHeaderCellDef> ID</th>
-      <td mat-cell *matCellDef="let person"> {{person.personId}} </td>
-    </ng-container>
-  
-  
-    <ng-container matColumnDef="personName">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let person"> {{person.personName}} </td>
-    </ng-container>
-  
-  
-    <ng-container matColumnDef="contact">
-      <th mat-header-cell *matHeaderCellDef>contact</th>
-      <td mat-cell *matCellDef="let person"> {{person.contact}} </td>
-    </ng-container>
-  
-  
-    <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef>address</th>
-      <td mat-cell *matCellDef="let person"> {{person.address}} </td>
-    </ng-container>
-  
-  
-    <ng-container matColumnDef="#">
-      <th mat-header-cell  *matHeaderCellDef > # </th>
-      <td mat-cell *matCellDef="let person" >
-        <button mat-button class="mat-raised-button mat-primary" [routerLink]="['person-application']"[queryParams]="{userId:person.user.userId}" >Application Details</button>
-    </td>
-    </ng-container>
-    
-  <ng-container matColumnDef="loading">
-          <mat-footer-cell *matFooterCellDef colspan="6">
-            Loading Data...
-         </mat-footer-cell>
-          
-         </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <tr mat-footer-row *matFooterRowDef="['loading']"[ngClass]="{'hide':dataSource!=null}"></tr>
-  </table> 
-  </div> 
-  </mat-tab>
-  
-    <mat-tab label ="Top Organizational Creditors">
-      <table mat-table [dataSource]="dataSource1">
-    
-    
-        <ng-container matColumnDef="organizationId">
-          <th mat-header-cell *matHeaderCellDef> ID</th>
-          <td mat-cell *matCellDef="let organization"> {{organization.organizationId}} </td>
-        </ng-container>
-      
-      
-        <ng-container matColumnDef="organizationName">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let organization"> {{organization.organizationName}} </td>
-        </ng-container>
-      
-      
-        <ng-container matColumnDef="contact">
-          <th mat-header-cell *matHeaderCellDef>contact</th>
-          <td mat-cell *matCellDef="let organization"> {{organization.contact}} </td>
-        </ng-container>
-      
-      
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef>address</th>
-          <td mat-cell *matCellDef="let organization"> {{organization.address}} </td>
-        </ng-container>
-  
-        
-  
-        <ng-container matColumnDef="directorName">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let organization"> {{organization.directorName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="#">
-          <th mat-header-cell  *matHeaderCellDef > # </th>
-          <td mat-cell *matCellDef="let organization" >
-            <button mat-button class="mat-raised-button mat-primary" [routerLink]="['organization-application']"[queryParams]="{userId:organization.user.userId}" >Application Details</button>
-        </td>
-        </ng-container>
 
-        <ng-container matColumnDef="loading">
-          <mat-footer-cell *matFooterCellDef colspan="6">
-            Loading Data...
-         </mat-footer-cell>
-          
-         </ng-container>
+<mat-tab-group animationDuration="1000ms">
+<mat-tab label ="Top Individual Creditors">
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+
+<ng-container matColumnDef="personId">
+<th mat-header-cell *matHeaderCellDef> Person Id </th>
+<td mat-cell *matCellDef="let element"> {{element.personId.personId}}</td>
+</ng-container> 
+
+ <ng-container matColumnDef="personName">
+  <th mat-header-cell *matHeaderCellDef> Name </th>
+  <td mat-cell *matCellDef="let element"> {{element.personId.personName}}</td>
+</ng-container> 
+
+
+<ng-container matColumnDef="contact">
+  <th mat-header-cell *matHeaderCellDef > Contact no </th>
+  <td mat-cell *matCellDef="let element"> {{element.personId.contact}}</td>
+</ng-container>
+
+<ng-container matColumnDef="address">
+  <th mat-header-cell *matHeaderCellDef > Address </th>
+  <td mat-cell *matCellDef="let element"> {{element.personId.address}}</td>
+</ng-container>
+
+<ng-container matColumnDef="expandedDetail">
+  <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+    <div class="example-element-detail"
+         [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+      <!-- <div class="example-element-diagram">
+        <div class="example-element-position"> {{element.position}} </div>
+        <div class="example-element-symbol"> {{element.symbol}} </div>
+        <div class="example-element-name"> {{element.name}} </div>
+        <div class="example-element-weight"> {{element.weight}} </div>
+      </div> -->
+      <div class="example-element-description">
+        <h4> ApplicantId  :{{element.applicationId}}</h4>
+        <h4> LoanAmount :{{element.loanAmount}}</h4>
+        <h4> Occupation :{{element.occupation}}</h4>
+        <!-- <h4> Email  :{{element.user.userEmail}}</h4> -->
+        <h4> Loan tenture :{{element.loanTenure}}</h4>
+      </div>
+    </div>
+  </td>
+</ng-container>
+
+<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+      class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element"
+      (click)="expandedElement = expandedElement === element ? null : element">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  </table>
+</mat-tab>
+ <mat-tab label ="Top Organizational Creditors">
   
-         <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
-        <tr mat-footer-row *matFooterRowDef="['loading']"[ngClass]="{'hide':dataSource1!=null}"></tr>
-        
-      </table>  
+  <table mat-table [dataSource]="dataSource1" multiTemplateDataRows class="mat-elevation-z8">
+
+    <ng-container matColumnDef="organizationId">
+    <th mat-header-cell *matHeaderCellDef> Person Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.organizationId.organizationId}}</td>
+    </ng-container> 
+    
+     <ng-container matColumnDef="organizationName">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.organizationId.organizationName}}</td>
+    </ng-container> 
+    
+    
+    <ng-container matColumnDef="contact">
+      <th mat-header-cell *matHeaderCellDef > Contact no </th>
+      <td mat-cell *matCellDef="let element"> {{element.organizationId.contact}}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef > Address </th>
+      <td mat-cell *matCellDef="let element"> {{element.organizationId.address}}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay1.length">
+        <div class="example-element-detail"
+             [@detailExpand]="element == expandedElement1 ? 'expanded' : 'collapsed'">
+          <!-- <div class="example-element-diagram">
+            <div class="example-element-position"> {{element.position}} </div>
+            <div class="example-element-symbol"> {{element.symbol}} </div>
+            <div class="example-element-name"> {{element.name}} </div>
+            <div class="example-element-weight"> {{element.weight}} </div>
+          </div> -->
+          <div class="example-element-description">
+            {{element.description}}
+            
+          </div>
+        </div>
+      </td>
+    </ng-container>
+    
+    
+    
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay1"></tr>
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplay1;"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement1 === element"
+          (click)="expandedElement1 = expandedElement1 === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      </table>
     </mat-tab>
-  </mat-tab-group>
-  </div>
-  </div>
-  
-  
-  
-  
+    
+
+
+</mat-tab-group>
+
+
+
