--- a/Creditz-Angular-src/app/individual-user/individual-user.component.css
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.css
@@ -30,7 +30,7 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: #15a085;
+  background-color: #4CAF50;
   color: white;
   padding: 100% 100%;
   margin: 10% 0;
@@ -417,59 +417,4 @@ iframe {
   .wrap-login100 {
     padding: 100px 15px 33px 15px;
   }
-}
-
-
-
-.container {
-  position: relative;
-  text-align: center;
-  color: rgb(5, 64, 112);
-}
-  
-.center-left{
-  position: absolute;
-  bottom:48%;
-  left:18%;
-}
-
-.bottom-right {
-position: absolute;
-bottom: 5%;
-left: 35%;
-}
-
-
-section.white {
-  /*background:url(/images/bg-section.png) repeat top center #fff;*/
-  background: #ffffff;
-  z-index: 3;
-  position: relative;
-}
-
-
-
-.orange-box {
-  background: #15a085;
-  color: #ffffff;
-  top: -76px;
-  position: relative;
-  text-align: left;
-  padding: 76px 94px;
-  max-width: 858px;
-  z-index: 5;
-  margin: 0 auto -76px auto;
-}
-
-
-.row2col .col-left {
-  padding-right: 40px;
-  border-right: 1px solid #ffffff;
-}
-.row2col .col-right {
-  padding-left: 40px;
-}
-
-.col-md-6 {
-  width: 50%;
 }
