--- a/Creditz-Angular-src/app/register/register.component.css
+++ b/Creditz-Angular-src/app/register/register.component.css
@@ -1,17 +1,19 @@
  @import "~@angular/material/prebuilt-themes/indigo-pink.css"; 
-/* body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
 
 input[type=text], input[type=password], input[type=email], input[type=address] {
   width: 100%;
+  height: 20%;
+  font-size: medium;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
-} */
+}
 
-/* button {
+ button {
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -19,7 +21,7 @@ input[type=text], input[type=password], input[type=email], input[type=address] {
   border: none;
   cursor: pointer;
   width: 100%;
-}
+} 
 
 button:hover {
   opacity: 0.8;
@@ -29,17 +31,19 @@ button:hover {
   width: auto;
   padding: 10px 18px;
   background-color: #f44336;
-} */
+} 
 
 .imgcontainer {
-  text-align: center;
+  /* text-align: center; */
   margin: 24px 0 12px 0;
+ 
 }
 
-img.avatar {
+/* img.avatar {
   width: 10%;
-  border-radius: 10%;
-}
+  border-radius:  10%;
+  align-self: center;
+} */
 
 .content {
   display: flex;
@@ -62,11 +66,11 @@ svg#clouds {
 }
 
 
-/* .container {
+ .container {
   padding: 16px;
 }
 
-span.psw {
+/*span.psw {
   float: right;
   padding-top: 16px;
 }
@@ -83,8 +87,9 @@ span.psw {
 
   .matt{
      height: 100%;
-     width: 70%;
-     float: left;
+     width: 50%;
+     /* float: left; */
      background-color: blue;
-
+      /* align-content: left; */
+      margin-right: 40%;
   }
